--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "dev": "gatsby clean && gatsby develop",
-    "preview": "gatsby build && gatsby serve"
+    "preview": "gatsby build && gatsby serve",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@reflexjs/components": "^0.1.7",
@@ -21,6 +22,7 @@
     "@reflexjs/preset-flex": "^0.1.5",
     "core-js": "^2.6.11",
     "gatsby": "2.23.14",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
