--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "forestry:preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
-    "@reflexjs/components": "^0.1.7",
-    "@reflexjs/gatsby-theme-base": "^0.1.9",
-    "@reflexjs/gatsby-theme-doc": "^0.1.9",
-    "@reflexjs/gatsby-theme-post": "^0.2.0",
-    "@reflexjs/gatsby-theme-styleguide": "^0.1.9",
-    "@reflexjs/preset-base": "^0.2.0",
-    "@reflexjs/preset-flex": "^0.1.5",
+    "@reflexjs/components": "^0.1.8",
+    "@reflexjs/gatsby-theme-base": "^0.2.7",
+    "@reflexjs/gatsby-theme-block": "^0.2.1",
+    "@reflexjs/gatsby-theme-doc": "^0.2.2",
+    "@reflexjs/gatsby-theme-post": "^0.3.3",
+    "@reflexjs/gatsby-theme-styleguide": "^0.1.11",
+    "@reflexjs/preset-base": "^0.2.4",
+    "@reflexjs/preset-flex": "^0.1.9",
     "core-js": "^2.6.11",
-    "gatsby": "2.23.19",
+    "gatsby": "^2.23.22-static-query-template.8",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
