--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@reflexjs/preset-flex": "^0.1.9",
     "core-js": "^2.6.11",
     "gatsby": "^2.23.22-static-query-template.8",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-source-notionso": "^1.1.6",
     "gh-pages": "^3.1.0",
+    "highlight.js": "9.17.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0"
   }
 }
