--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "dependencies": {
     "@reflexjs/components": "^0.1.8",
-    "@reflexjs/gatsby-theme-base": "^0.2.7",
-    "@reflexjs/gatsby-theme-block": "^0.2.1",
-    "@reflexjs/gatsby-theme-doc": "^0.2.2",
-    "@reflexjs/gatsby-theme-post": "^0.3.3",
-    "@reflexjs/gatsby-theme-styleguide": "^0.1.11",
+    "@reflexjs/gatsby-theme-base": "^0.3.0",
+    "@reflexjs/gatsby-theme-block": "^0.3.0",
+    "@reflexjs/gatsby-theme-doc": "^0.3.0",
+    "@reflexjs/gatsby-theme-post": "^0.4.0",
+    "@reflexjs/gatsby-theme-styleguide": "^0.2.0",
     "@reflexjs/preset-base": "^0.2.4",
     "@reflexjs/preset-flex": "^0.1.9",
     "core-js": "^2.6.11",
-    "gatsby": "^2.23.22-static-query-template.8",
+    "gatsby": "^2.24.11",
     "gatsby-source-notionso": "^1.1.6",
     "gh-pages": "^3.1.0",
     "highlight.js": "9.17.1",
