--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
   "dependencies": {
     "@loadable/component": "^5.13.1",
     "@reflexjs/components": "^0.1.8",
+    "@reflexjs/gatsby-plugin-metatags": "^0.2.0",
     "@reflexjs/gatsby-theme-base": "^0.3.1",
     "@reflexjs/gatsby-theme-block": "^0.3.0",
     "@reflexjs/gatsby-theme-doc": "^0.3.1",
-    "@reflexjs/gatsby-theme-post": "^0.5.0",
+    "@reflexjs/gatsby-theme-post": "^0.6.0",
     "@reflexjs/gatsby-theme-styleguide": "^0.2.0",
     "@reflexjs/preset-base": "^0.2.4",
     "@reflexjs/preset-flex": "^0.1.9",
     "core-js": "^2.6.11",
     "gatsby": "^2.24.11",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-source-notionso": "^1.1.6",
     "gh-pages": "^3.1.0",
     "highlight.js": "9.17.1",
